<resources>
    <string name="app_name">Chat App</string>
    <string name="app_id">d4606a6191914d7a98831d0de92cdc98</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="no_account_register_now">No account ? Register now !</string>
    <string name="select_photo">Select Photo</string>
    <string name="todo">TODO</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="username_new_message">Username</string>
    <string name="SendChat">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_image">Send image</string>
    <string name="send_message">Send message</string>
    <string name="image_view">image_view</string>
    <string name="image_message">Image message</string>
    <string name="who_receive_call">Who receive call</string>
    <string name="who_make_call">Who make call</string>
    <string name="stop">Stop</string>
    <string name="menu_button">Menu button</string>
    <string name="group_chat_button">Group chat button</string>
    <string name="voice_call_button">Voice call button</string>
    <string name="video_call_button">Video call button</string>
    <string name="new_message_button">New message button</string>
    <string name="end_call">End call</string>
    <string name="white_board_activity">White board activity</string>
    <!-- Strings used for fragments for navigation -->
</resources>