<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messages.LatestMessages">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/latest_messages_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:civ_border_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/group_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/group_chat_button"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="#A5D6A7"
        app:layout_constraintBottom_toTopOf="@+id/new_message_button"
        app:layout_constraintEnd_toEndOf="@+id/new_message_button"
        app:layout_constraintStart_toStartOf="@+id/new_message_button"
        app:srcCompat="@drawable/baseline_groups_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/new_message_button"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="#64B5F6"
        app:layout_constraintBottom_toTopOf="@+id/menu_button"
        app:layout_constraintEnd_toEndOf="@+id/menu_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_button"
        app:srcCompat="@drawable/baseline_chat_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/menu_button"
        android:focusable="true"
        app:backgroundTint="#B2DFDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/latest_messages_recycler_view"
        app:rippleColor="#000000"
        app:srcCompat="@drawable/baseline_apps_36" />

</androidx.constraintlayout.widget.ConstraintLayout>