<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".messages.ChatLogActivity">

    <EditText
        android:id="@+id/message_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_message"
        android:ems="10"
        android:hint="@string/enter_message"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textPersonName"
        android:paddingStart="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/choose_image"
        app:layout_constraintStart_toEndOf="@+id/util_menu"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/send_message_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/send_message"
        android:text="@string/SendChat"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/message_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/choose_image"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/send_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_message_button"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/voice_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="#CFCFCF"
        app:layout_constraintBottom_toTopOf="@+id/util_menu"
        app:layout_constraintEnd_toEndOf="@+id/util_menu"
        app:layout_constraintStart_toStartOf="@+id/util_menu"
        app:srcCompat="@drawable/baseline_call_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/video_call"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        app:backgroundTint="#CFCFCF"
        app:layout_constraintBottom_toTopOf="@+id/voice_call"
        app:layout_constraintEnd_toEndOf="@+id/voice_call"
        app:layout_constraintStart_toStartOf="@+id/voice_call"
        app:srcCompat="@drawable/baseline_videocam_24"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/whiteboard"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        app:backgroundTint="#CFCFCF"
        app:layout_constraintBottom_toTopOf="@+id/video_call"
        app:layout_constraintEnd_toEndOf="@+id/video_call"
        app:layout_constraintStart_toStartOf="@+id/video_call"
        app:srcCompat="@drawable/baseline_draw_24"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/util_menu"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#CFCFCF"
        android:clickable="true"
        app:backgroundTint="#CFCFCF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_add_24"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>